--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,4 @@
 server.port=8083
-spring.datasource.url=jdbc:postgresql://localhost:5432/contacts
+spring.datasource.url=jdbc:postgresql://localhost:5432/contacts?currentSchema=contacts_schema
 spring.datasource.username=postgres
 spring.datasource.password=VoronPostgres
-spring.datasource.hikari.schema=contacts_schema
